公用的底部版权说明，app.js中添加拨号功能

--- a/wxApp/pages/home/home.wxml
+++ b/wxApp/pages/home/home.wxml
@@ -12,4 +12,6 @@
     <view class="weui-loadmore" wx:else>
         <view class="weui-loadmore__tips weui-loadmore__tips_in-line bg-transparent">暂无岗位</view>
     </view>
+
+    <include src="/pages/common/footer.wxml"/>
 </view>
