--- a/wxApp/pages/home/home.wxml
+++ b/wxApp/pages/home/home.wxml
@@ -1,17 +1,27 @@
 <view class="page">
     <slider id="slider" sliders="{{sliders}}" style="margin:0;">
     </slider>
-
-    <view class="weui-loadmore" wx:if="{{!empty && !loading}}">
-        <view class="weui-loadmore__tips weui-loadmore__tips_in-line bg-transparent">上拉加载更多</view>
+    <view class="bg-white weui-flex index-icon-list">
+        <navigator url="" class="weui-flex__item">
+            <view class="index-icon" style="background-image:url({{domain}}/wxApp/wyc.png-icon)" />
+            <view class="text-m a-c">网约车</view>
+        </navigator>
+        <navigator class="weui-flex__item">
+            <view class="index-icon" style="background-image:url({{domain}}/wxApp/kyc.png-icon)" />
+            <view class="text-m a-c">客运车</view>
+        </navigator>
+        <navigator class="weui-flex__item">
+            <view class="index-icon" style="background-image:url({{domain}}/wxApp/czc.png-icon)" />
+            <view class="text-m a-c">出租车</view>
+        </navigator>
+        <navigator class="weui-flex__item">
+            <view class="index-icon" style="background-image:url({{domain}}/wxApp/hc.png-icon)" />
+            <view class="text-m a-c">货车</view>
+        </navigator>
+        <navigator class="weui-flex__item">
+            <view class="index-icon" style="background-image:url({{domain}}/wxApp/wxp.png-icon)" />
+            <view class="text-m a-c">危险品</view>
+        </navigator>
     </view>
-    <view class="weui-loadmore" wx:elif="{{loading}}">
-        <view class="weui-loading"> </view>
-        <view class="weui-loadmore__tips">加载中</view>
-    </view>
-    <view class="weui-loadmore" wx:else>
-        <view class="weui-loadmore__tips weui-loadmore__tips_in-line bg-transparent">暂无岗位</view>
-    </view>
-
     <include src="/pages/common/footer.wxml"/>
 </view>
