--- a/backend/baipao123/layuiAdm/assets/layuicms2.0/css/index.css
+++ b/backend/baipao123/layuiAdm/assets/layuicms2.0/css/index.css
@@ -75,7 +75,7 @@ iframe.child-iFrame{ position:absolute; height:100%; width:100%; border:none;}
 .user-photo p{ display: block; width: 100%; height: 25px; color: #ffffff; text-align: center; font-size: 12px; white-space: nowrap;line-height: 25px; overflow: hidden;}
 /*左侧导航重定义*/
 .layui-nav-item.layui-nav-itemed{ background-color:#2B2E37 !important;}
-.layui-nav-itemed:before{ width:5px; height:100%; background-color:#009688; position:absolute; content:''; left:0; top:0;}
+.layui-nav-itemed:before{ width:5px; height:45px; background-color:#009688; position:absolute; content:''; left:0; top:0;}
 .layui-nav-itemed .layui-nav-child a{ padding-left:40px;}
 /*左侧搜索框*/
 .component{ width:180px; height:30px; margin:0 auto 5px; position:relative;}
