--- a/wxApp/components/question/questionInfo.wxss
+++ b/wxApp/components/question/questionInfo.wxss
@@ -1,3 +1,4 @@
+@import "../../wxss/icon.wxss";
 .weui-flex {
     display: -webkit-box;
     display: -webkit-flex;
@@ -18,6 +19,7 @@
     background: white;
     font-size: 30rpx;
     position: relative;
+    padding-bottom:0;
 }
 .header{
     color: #337ab7;
@@ -60,6 +62,17 @@
 .option-img{
     width: 95%;
     display: block;
-    margin: 20rpx auto;
+    margin: 0 auto 20rpx;
 }
 
+.actions{
+    color: #1aad19;
+    font-size: 30rpx;
+    line-height: 80rpx;
+}
+.actions .see{
+    text-align:center;
+}
+.actions .next{
+    text-align:right;
+}
