--- a/wxApp/components/question/questionInfo.wxml
+++ b/wxApp/components/question/questionInfo.wxml
@@ -1,13 +1,21 @@
 <view class="container">
-    <slot> </slot>
+    <view class="head">
+        <text wx:if="{{question.type == 1}}">判断题</text>
+        <text wx:elif="{{question.type == 2}}">单选题</text>
+        <text wx:elif="{{question.type == 3}}">多选题</text>
+        <text wx:elif="{{question.type == 4}}">填空题</text>
+    </view>
     <view class="body">
         <view class="header">第{{offset}}题</view>
-        <view class="title" wx:if="{{question.title}}"><text space="nbsp">{{question.title}}</text></view>
+        <view class="title" wx:if="{{question.title}}">
+            <text space="nbsp">{{question.title}}</text>
+        </view>
         <view class="attaches">
             <img urls="{{question.attaches}}"/>
         </view>
         <view class="option weui-flex" wx:if="{{question.type==1 || question.type == 2 }}">
-            <view class="weui-flex__item-auto {{item.img == '' ? '' : 'center'}}" wx:for="{{question.options}}" wx:key="key-option" bindtap="chose" data-option="{{item.option}}">
+            <view class="weui-flex__item-auto {{item.img == '' ? '' : 'center'}} {{answer.indexOf(item.option)>-1 ? 'select':''}} {{result.answer && result.answer.indexOf(item.option)>-1 ? 'success':''}} "
+                  wx:for="{{question.options}}" wx:key="key-option" bindtap="chose" data-option="{{item.option}}">
                 <view class="option-title">
                     <text space="nbsp">{{item.option}}{{item.text ? '.'+item.text : ''}}</text>
                 </view>
@@ -16,6 +24,11 @@
                 </view>
             </view>
         </view>
+
+        <view class="answer" wx:if="{{result.answer}}">
+
+        </view>
+
         <view class="actions weui-flex">
             <view class="weui-flex__item-auto prev" bindtap="prev">
                 <span class="myIcon icon-left">上一题</span>
@@ -24,7 +37,8 @@
                 <span class="myIcon icon-eye">查看答案</span>
             </view>
             <view class="weui-flex__item-auto next" bindtap="next">
-                下一题<span class="myIcon icon-right"/>
+                下一题
+                <span class="myIcon icon-right"/>
             </view>
         </view>
     </view>
