--- a/wxApp/app.wxss
+++ b/wxApp/app.wxss
@@ -97,6 +97,30 @@ button.clear::after {
     text-overflow: ellipsis;
 }
 
+.blue-block{
+    color: #31708f;
+    background-color: #d9edf7;
+    border-color: #bce8f1;
+}
+
+.green-block {
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+}
+
+.orange-block {
+    color: #8a6d3b;
+    background-color: #fcf8e3;
+    border-color: #faebcc;
+}
+
+.red-block {
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+}
+
 .f-l{
     float: left;
 }
@@ -202,9 +226,13 @@ button.low{
     border: none;
 }
 
-.weui-loading.big{
+.weui-loading.big {
     width: 200rpx;
     height: 200rpx;
     display: block;
     margin: 100rpx auto;
+}
+
+.weui-loading.big.hidden {
+    display: none;
 }
