--- a/wxApp/pages/question/train.wxml
+++ b/wxApp/pages/question/train.wxml
@@ -1,3 +1,4 @@
 <view class="page">
     <questionInfo bindMoreList="moreList" list="{{questions}}" offset="{{offset}}"/>
+    <include src="/pages/common/footer.wxml"/>
 </view>
