--- a/wxApp/pages/user/user.wxss
+++ b/wxApp/pages/user/user.wxss
@@ -27,3 +27,7 @@
     background: url(http://img.newlt.justyoujob.com/logo.jpeg-icon) no-repeat 100% 100%;
     background-size: 100%;
 }
+
+.register{
+    margin:30rpx;
+}
