--- a/wxApp/pages/user/user.wxml
+++ b/wxApp/pages/user/user.wxml
@@ -24,8 +24,8 @@
                 <view class="weui-cell__ft weui-cell__ft_in-access" />
             </view>
 
-            <view bindtap="train" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-                <view class="weui-cell__bd"><span class="myIcon margin-r2 text-orange icon-link" />一键练习</view>
+            <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+                <picker class="weui-cell__bd" range="{{qTypes}}" range-key="name" bindchange="train"><span class="myIcon margin-r2 text-orange icon-link" />一键练习</picker>
                 <view class="weui-cell__ft weui-cell__ft_in-access" />
             </view>
 
