--- a/wxApp/pages/home/home.wxss
+++ b/wxApp/pages/home/home.wxss
@@ -10,3 +10,11 @@
     background: no-repeat;
     background-size: 100% 100%;
 }
+
+.school{
+    margin-top: 60rpx;
+}
+.video{
+    width: 240rpx;
+    height: 160rpx;
+}
