--- a/wxApp/pages/home/home.wxml
+++ b/wxApp/pages/home/home.wxml
@@ -1,11 +1,23 @@
 <view class="page">
     <slider id="slider" sliders="{{sliders}}" style="margin:0;">
     </slider>
-    <view class="bg-white weui-flex index-icon-list">
+    <view class="bg-white weui-flex index-icon-list" wx:if="{{types.length>0}}">
         <navigator url="/pages/question/index?id={{item.tid}}" class="weui-flex__item" wx:for="{{types}}" wx:key="type">
-            <view class="index-icon" style="background-image:url({{domain}}{{item.icon}})" />
+            <view class="index-icon" style="background-image:url({{domain}}{{item.icon}})"/>
             <view class="text-m a-c">{{item.name}}</view>
         </navigator>
+    </view>
+
+    <view class="weui-cells weui-cells_after-title school">
+        <view class="weui-cell weui-cell_access">领图学院</view>
+        <view class="weui-cell">
+            <view class="weui-cell__hd" wx:if="{{domain}}">
+                <video class="video" id="video" src="{{domain}}help.mp4" poster="" bindplay="play"/>
+            </view>
+            <view class="weui-cell__bd">
+                <view>考试教程</view>
+            </view>
+        </view>
     </view>
     <include src="/pages/common/footer.wxml"/>
 </view>
